# RobotMove

./: README.md  package.xml  setup.cfg  setup.py
.history/urdf/: prarob_manipulator_20250606225654.xacro  prarob_manipulator_20250607012323.xacro  prarob_manipulator_20250607012413.xacro  prarob_manipulator_20250607013406.xacro
GUI/: gui.py
PathPlaning/eyes_v1/: package.xml  setup.cfg  setup.py
PathPlaning/eyes_v1/eyes_v1/: pathfinder_a_star.py
PathPlaning/eyes_v1/launch/: eyes_test_v1.launch.py  robot_vision.launch.py
PathPlaning/eyes_v1/msg/: DetectedEntityArray.msg
controllers/: controllers.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/prarob_vision/lib/prarob_vision/: image_process  image_view
install/prarob_vision/share/prarob_vision/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: image_process.launch.xml  prarob_manipulator.launch.py  prarob_manipulator.rviz
log/: latest_build
meshes/: XL-430_new.dae  base.dae  end_effector.dae  link_90.dae  link_rr.dae  postolje_seminar_v1.step  prarob_ruka1_v1.step  ruka2_.step
prarob_vision/: image_process.py  image_view.py
scripts/: gui.py  move_robot.py  pathfinder_a_star.py
scripts/eyes_msgs/: CMakeLists.txt  package.xml
scripts/eyes_msgs/msg/: DetectedEntity.msg
scripts/eyes_v1/config/: camera_params.yaml
scripts/eyes_v1/eyes_v1/: a_star_example.py  a_star_simulator.py  a_star_testing.py  robot_eyes_v1.py
scripts/eyes_v1/msg/: DetectedEntity.msg
urdf/: prarob_manipulator.ros2_control.xacro
(+34 files in other folders)
